Dataplatform -> Data Platform

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#f0f8f9" />
-    <meta name="description" content="Statistics Norway Dataplatform Migration Webclient" />
+    <meta name="description" content="Statistics Norway Data Platform Migration Webclient" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Statistics Norway Dataplatform Migration Webclient</title>
+    <title>Statistics Norway Data Platform Migration Webclient</title>
     <script src="%PUBLIC_URL%/__ENV.js"></script>
   </head>
   <body>
